--- a/carrito.html
+++ b/carrito.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no ,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="css/index-style.css">
+    <link rel="stylesheet" href="css/carrito-style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="img/logo_transparent.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +13,7 @@
     <title>Todo Tech</title>
 </head>
 <body>
-    <script src="js/prueba-menu.js"> </script>
+    
     <header class="header-container">
         <div class="header-container-1">
             <div id="logo"> <!-- logo-->
@@ -30,7 +31,10 @@
             </div>
             <div class ="two-elem-container"> 
                 <div><!-- carrito-->
-                    <button ><a href="carrito.html"><img src="img/carrito-de-compras.png" width="20px"></a>
+                    <button >
+                        <a href="carrito.html"><img src="img/carrito-de-compras.png" width="20px"></a>
+                        <span id="cantidad-productos" class="num-productos">0</span>
+
                     </button>
                 </div>
                 <div><!-- iniciar sesion-->
@@ -45,17 +49,39 @@
     <nav> 
         <ul class="categories-container"><!-- navegador de categorias-->
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
+            <li class ="boton-productos">
+                <a href="productos.html" id="categoria-titulo">Productos</a>
             <li><a href="contactos.html">Contacto</a></li>
         </ul>
     </nav>
 </header>
-<main>
+
 <!-- CARRITO-->
-    <section class="carrito-inicio">
-        <p>carrito hay que ver como realizarlo</p>
-    </section>
-</main>
+    <div class="contenedor-carrito">
+        <p id="carrito-vacio" class="carrito-vacio"> Tu carrito se encuentra vacio </p>
+        <div id="contenedor-carrito-productos" class="carrito-productos disabled"> 
+            
+        </div>
+
+        <div id="carrito-acciones" class="carrito-acciones disabled">
+            <div class="carrito-acciones-izquierda">
+                <button id="carrito-acciones-vaciar" class="carrito-acciones-vaciar">Vaciar carrito</button>
+            </div>
+            <div class="carrito-acciones-derecha">
+                <div class="carrito-acciones-total">
+                    <p>Total</p>
+                    <p id="total"></p> 
+                </div>
+                <button id="carrito-acciones-comprar" class="carrito-acciones-comprar">Comprar</button>
+            </div>
+        </div>
+        <p id="carrito-comprado" class="carrito-comprado disabled"> Gracias por tu compra
+            <i class="bi bi-emoji-laughing-fill"></i>
+        </p>
+
+
+    </div>
+
 
 <!-- FOOTER-->
 <footer id="contenedor1">
@@ -87,5 +113,6 @@
         <a class="footer-A" href="https://twitter.com/" target="_blank"><img src="img/twitter.png" alt="whatsapp" width="25%"></a>
     </div>
   </footer>
+  <script src= "/js/carrito.js"> </script>
 </body>
 </html>
