--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <li><a href="#tablets" id="tablets" class="categoria">tablets</a></li>
                 </ul>
             </li>
+            <li><a href="contactos.html">Contacto</a></li>
         </ul>
     </nav>
 </header>
