--- a/mediosdepago.html
+++ b/mediosdepago.html
@@ -39,10 +39,26 @@
             </div>
         </div>
     </div>
+    <!--<div class="menu_bar">
+        <a href="#" class="bt-menu">Menu</a>
+    </div>-->
     <nav> 
         <ul class="categories-container"><!-- navegador de categorias-->
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
+            <li class="boton-productos">
+                <a href="productos.html" id="categoria-titulo">Productos</a>
+                <ul class="menu-categorias-productos">
+                    <li><a href = "productos.html" > Todos los productos</a></li>
+                    <li><a href="#audio" id="audio" class="categoria">Audio</a></li>
+                    <li><a href="#auriculares" id="auriculares" class="categoria">Auriculares</a></li>
+                    <li><a href="#camaras" id="camaras" class="categoria">Camaras</a></li>
+                    <li><a href="#celulares" id="celulares" class="categoria">Celulares</a></li>
+                    <li><a href="#monitores" id="monitores" class="categoria">Monitores</a></li>
+                    <li><a href="#mouse-y-teclado" id="mouse-y-teclado" class="categoria">Mouse y teclado</a></li>
+                    <li><a href="#notebooks" id="notebooks" class="categoria">notebooks</a></li>
+                    <li><a href="#tablets" id="tablets" class="categoria">tablets</a></li>
+                </ul>
+            </li>
             <li><a href="contactos.html">Contacto</a></li>
         </ul>
     </nav>
