--- a/productos.html
+++ b/productos.html
@@ -33,14 +33,11 @@
         </div>
         <div class ="two-elem-container"> 
             <div><!-- carrito-->
-                <button id="boton-carrito"  type="button" >
-                    <a href="carrito.html"><img src="img/carrito-de-compras.png" width="20px"></a>
-                    <span id="cantidad-productos" class="num-productos ">0</span>
+                <button ><a href="carrito.html"><img src="img/carrito-de-compras.png" width="20px"></a>
                 </button>
             </div>
             <div><!-- iniciar sesion-->
                 <button><a href="usuario.html"><img src="img/usuario.png" width="20px"></a>
-                
                 </button>
             </div>
         </div>
@@ -65,8 +62,7 @@
                     <li><a href="#tablets" id="tablets" class="categoria">tablets</a></li>
                 </ul>
             </li>
-
-           
+            <li><a href="contactos.html">Contacto</a></li>
         </ul>
     </nav>
 </header>
