--- a/carrito.html
+++ b/carrito.html
@@ -13,7 +13,7 @@
     <title>Todo Tech</title>
 </head>
 <body>
-    
+<script src="js/prueba-menu.js"> </script>    
 <header class="header-container">
     <div class="header-container-1">
         <div id="logo"> <!-- logo-->
