--- a/productos.html
+++ b/productos.html
@@ -14,7 +14,7 @@
     <title>Todo Tech</title>
 </head>
 <body>
-
+<script src="js/prueba-menu.js"> </script>
 <!-- LISTA DE PRODUCTOR-->
 <header class="header-container">
     <div class="header-container-1">
