--- a/usuario.html
+++ b/usuario.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport"
-            content="width=device-width, user-scalable=no ,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <link rel="stylesheet" href="css/index-style.css">
-        <link rel="icon" type="image/x-icon" href="img/logo_transparent.png">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Ephesis&family=Fuggles&family=Gabarito&family=Roboto:wght@700&display=swap"
-            rel="stylesheet">
-        <title>Todo Tech</title>
-    </head>
-    <body>
-        <script src="js/prueba-menu.js"> </script>
-<header class="header-container">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, user-scalable=no ,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="css/index-style.css">
+    <link rel="icon" type="image/x-icon" href="img/logo_transparent.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Ephesis&family=Fuggles&family=Gabarito&family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <title>Todo Tech</title>
+</head>
+<body>
+  <script src="js/prueba-menu.js"> </script>
+  <header class="header-container">
     <div class="header-container-1">
         <div id="logo"> <!-- logo-->
             <a href="index.html"><img src="img/logo_transparent.png" width="100px"></a>
