--- a/mediosdepago.html
+++ b/mediosdepago.html
@@ -89,33 +89,33 @@
 
 <!-- FOOTER-->
 <footer id="contenedor1">
-  <div id="footer0"><!--logo-->
-      <img src="img/logo_transparent.png" width="100px">
-  </div>
-  <div id="footer1"><!--Medios de pagos - Preguntas Frecuentes - Trabaja con nosotros-->
-      <p>Conoce nuestros medios de pagos: <br> <a href="mediosdepago.html" target="_blank">Medios de pagos</a></p>
-      <p><a class="footer-A" href="preguntas-frecuentes.html" target="_blank">Preguntas Frecuentes</a></p>
-      <p><a class="footer-A" href="trabajaconnostros.html" target="_blank">Trabaja con nosotros</a></p>
-      <p><a class="footer-A" href="quienessomos.html"target="_blank">¿Quienes somos?</a></p>
-  </div>
-  <div id="footer2"><!--ubicacion mapa-->
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13619.164466559434!2d-64.1882429!3d-31.4198807!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a32dcf5d747f%3A0x40373220b29140ac!2sPatio%20Olmos%20Shopping!5e0!3m2!1ses-419!2sar!4v1696372543222!5m2!1ses-419!2sar" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-  </div>
-  <div id="footer3"><!--Contactos-->
-      <p> Encontranos en: <br>
-      Av. Vélez Sarsfield 361, Córdoba Capital</p>
-      <p>Lunes a Sabados de 10hs a 22hs
-      <br>Domingos de 10hs a 18hs</p>
-      <p>Atencion al cliente: <br> 0800-111-1234</p> 
-  </div>
-  <div id="footer4"><!--redes sociales-->
-      <br>
-      <a class="footer-A"  href="https://web.whatsapp.com/" target="_blank"><img src="img/whatsapp.png" alt="Whatsapp" width="25%"></a><br>
-      <a class="footer-A" href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="Instagram"  width="25%"></a>
-      <a class="footer-A" href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png" alt="Facebook"  width="25%"></a><br>
-      <a class="footer-A" href="https://www.youtube.com/" target="_blank"><img src="img/youtube.png" alt="Youtube" width="25%"></a>
-      <a class="footer-A" href="https://twitter.com/" target="_blank"><img src="img/twitter.png" alt="whatsapp" width="25%"></a>
-  </div>
-</footer>
+    <div id="footer0"><!--logo-->
+        <img src="img/logo_transparent.png" width="100px">
+    </div>
+    <div id="footer1"><!--Medios de pagos - Preguntas Frecuentes - Trabaja con nosotros-->
+        <p>Conoce nuestros medios de pagos: <br> <a class="footer-A" href="mediosdepago.html">Medios de pagos</a></p>
+        <p><a class="footer-A" href="preguntas-frecuentes.html">Preguntas Frecuentes</a></p>
+        <p><a class="footer-A" href="trabajaconnostros.html">Trabaja con nosotros</a></p>
+        <p><a class="footer-A" href="quienessomos.html">¿Quienes somos?</a></p>
+    </div>
+    <div id="footer2"><!--ubicacion mapa-->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13619.164466559434!2d-64.1882429!3d-31.4198807!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a32dcf5d747f%3A0x40373220b29140ac!2sPatio%20Olmos%20Shopping!5e0!3m2!1ses-419!2sar!4v1696372543222!5m2!1ses-419!2sar" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+    </div>
+    <div id="footer3"><!--Contactos-->
+        <p> Encontranos en: <br>
+        Av. Vélez Sarsfield 361, Córdoba Capital</p>
+        <p>Lunes a Sabados de 10hs a 22hs
+        <br>Domingos de 10hs a 18hs</p>
+        <p>Atencion al cliente: <br> 0800-111-1234</p> 
+    </div>
+    <div id="footer4"><!--redes sociales-->
+        <br>
+        <a class="footer-A"  href="https://web.whatsapp.com/" target="_blank"><img src="img/whatsapp.png" alt="Whatsapp" width="25%"></a><br>
+        <a class="footer-A" href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="Instagram"  width="25%"></a>
+        <a class="footer-A" href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png" alt="Facebook"  width="25%"></a><br>
+        <a class="footer-A" href="https://www.youtube.com/" target="_blank"><img src="img/youtube.png" alt="Youtube" width="25%"></a>
+        <a class="footer-A" href="https://twitter.com/" target="_blank"><img src="img/twitter.png" alt="whatsapp" width="25%"></a>
+    </div>
+  </footer>
 </body>
 </html>
