--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -148,10 +148,10 @@
         <img src="img/logo_transparent.png" width="100px">
     </div>
     <div id="footer1"><!--Medios de pagos - Preguntas Frecuentes - Trabaja con nosotros-->
-        <p>Conoce nuestros medios de pagos: <br> <a href="mediosdepago.html" target="_blank">Medios de pagos</a></p>
-        <p><a class="footer-A" id="bpreguntas" type="button" onclick="bpregfr()">Preguntas Frecuentes</a></p>
-        <p><a class="footer-A" href="trabajaconnostros.html" target="_blank">Trabaja con nosotros</a></p>
-        <p><a class="footer-A" href="quienessomos.html"target="_blank">¿Quienes somos?</a></p>
+        <p>Conoce nuestros medios de pagos: <br> <a class="footer-A" href="mediosdepago.html">Medios de pagos</a></p>
+        <p><a class="footer-A" href="preguntas-frecuentes.html">Preguntas Frecuentes</a></p>
+        <p><a class="footer-A" href="trabajaconnostros.html">Trabaja con nosotros</a></p>
+        <p><a class="footer-A" href="quienessomos.html">¿Quienes somos?</a></p>
     </div>
     <div id="footer2"><!--ubicacion mapa-->
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13619.164466559434!2d-64.1882429!3d-31.4198807!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a32dcf5d747f%3A0x40373220b29140ac!2sPatio%20Olmos%20Shopping!5e0!3m2!1ses-419!2sar!4v1696372543222!5m2!1ses-419!2sar" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
