--- a/contactos.html
+++ b/contactos.html
@@ -76,7 +76,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13619.164466559434!2d-64.1882429!3d-31.4198807!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a32dcf5d747f%3A0x40373220b29140ac!2sPatio%20Olmos%20Shopping!5e0!3m2!1ses-419!2sar!4v1696372543222!5m2!1ses-419!2sar" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
         </div>
         <div id="enviar-consulta">
-            <h2>Formulas de <br> consultas</h2>
+            <h2>Envianos tus <br> consultas</h2>
                 <form action="#" method="get">
                     <input type="text" placeholder="Nombre" id="nombre" name="nombre"><br><br>
                     <input type="text" placeholder="Apellido" id="apellido" name="apellido"><br><br>
