--- a/mediosdepago.html
+++ b/mediosdepago.html
@@ -90,11 +90,11 @@
 <!-- FOOTER-->
 <footer id="contenedor1">
     <div id="footer0"><!--logo-->
-        <img src="img/logo_transparent.png" width="100px">
+        <img src="img/logo_transparent.png" width="150px">
     </div>
     <div id="footer1"><!--Medios de pagos - Preguntas Frecuentes - Trabaja con nosotros-->
         <p>Conoce nuestros medios de pagos: <br> <a class="footer-A" href="mediosdepago.html">Medios de pagos</a></p>
-        <p><a class="footer-A" href="preguntas-frecuentes.html">Preguntas Frecuentes</a></p>
+        <p><a class="footer-A" id="bpreguntas" type="button" onclick="bpregfr()">Preguntas Frecuentes</a></p>
         <p><a class="footer-A" href="trabajaconnostros.html">Trabaja con nosotros</a></p>
         <p><a class="footer-A" href="quienessomos.html">¿Quienes somos?</a></p>
     </div>
@@ -110,12 +110,12 @@
     </div>
     <div id="footer4"><!--redes sociales-->
         <br>
-        <a class="footer-A"  href="https://web.whatsapp.com/" target="_blank"><img src="img/whatsapp.png" alt="Whatsapp" width="25%"></a><br>
-        <a class="footer-A" href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="Instagram"  width="25%"></a>
-        <a class="footer-A" href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png" alt="Facebook"  width="25%"></a><br>
-        <a class="footer-A" href="https://www.youtube.com/" target="_blank"><img src="img/youtube.png" alt="Youtube" width="25%"></a>
-        <a class="footer-A" href="https://twitter.com/" target="_blank"><img src="img/twitter.png" alt="whatsapp" width="25%"></a>
+        <a class="footer-A"  href="https://web.whatsapp.com/" target="_blank"><img src="img/whatsapp.png" alt="Whatsapp" width="35px" height="35px"></a><br>
+        <a class="footer-A" href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="Instagram"  width="35px" height="35px"></a>
+        <a class="footer-A" href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png" alt="Facebook"  width="35px" height="35px"></a><br>
+        <a class="footer-A" href="https://www.youtube.com/" target="_blank"><img src="img/youtube.png" alt="Youtube" wwidth="35px" height="35px"></a>
+        <a class="footer-A" href="https://twitter.com/" target="_blank"><img src="img/twitter.png" alt="whatsapp" width="35px" height="35px"></a>
     </div>
-  </footer>
+</footer>
 </body>
 </html>
