--- a/quienessomos.html
+++ b/quienessomos.html
@@ -111,7 +111,7 @@
     </div>
     <div id="footer1"><!--Medios de pagos - Preguntas Frecuentes - Trabaja con nosotros-->
         <p>Conoce nuestros medios de pagos: <br> <a class="footer-A" href="mediosdepago.html">Medios de pagos</a></p>
-        <p><a class="footer-A" id="bpreguntas" type="button" onclick="bpregfr()">Preguntas Frecuentes</a></p>
+        <p><a class="footer-A" id="bpreguntas" type="button" onclick="bpregfr()" href="preguntas-frecuentes.html">Preguntas Frecuentes</a></p>
         <p><a class="footer-A" href="trabajaconnostros.html">Trabaja con nosotros</a></p>
         <p><a class="footer-A" href="quienessomos.html">¿Quienes somos?</a></p>
     </div>
