--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Todo Tech</title>
 </head>
 <body>
-<script src="js/prueba-menu.js"> </script>
+<script defer src="js/prueba-menu.js"> </script>
 <header class="header-container">
     <div class="header-container-1">
         <div id="logo"> <!-- logo-->
