--- a/carrito.html
+++ b/carrito.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no ,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="css/index-style.css">
+    <link rel="stylesheet" href="css/carrito-style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="img/logo_transparent.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,6 +32,7 @@
         <div class ="two-elem-container"> 
             <div><!-- carrito-->
                 <button ><a href="carrito.html"><img src="img/carrito-de-compras.png" width="20px"></a>
+                    <span id="cantidad-productos" class="num-productos">0</span>
                 </button>
             </div>
             <div><!-- iniciar sesion-->
